# jibberish

./: .env  .gitignore  .jbrsh  .jbrsh-mcp-servers.json  CLAUDE.md  MANIFEST.in  README-context-manager.md  README-plugins.md  README-tests.md  README.md  TODO.md  __init__.py  api.py  built_ins.py  chat.py  executor.py  executor.py.bak  history.py  jibberish.py  plugin_system.py  pyproject.toml  rename_script.sh  requirements.txt  setup.py  setup.sh  update_toml_version.py
.github/workflows/: python-app.yml
README/: README-cna-setup-plugin.md  README-installation.md  README-mcp-kubernetes.md  README-mcp-servers.md  README-plugins.md  README-setup.md  README-tools.md
app/: .jbrsh-mcp-servers.json  __init__.py  api.py  built_ins.py  chat.py  context_manager.py  executor.py  history.py  jibberish.py  output_history.py  plugin_system.py  utils.py  version.py
app/plugins/: __init__.py  ai_command.py  alias_command.py  cd_command.py  change_partner_command.py  cna_setup_command.py  dir_stack_command.py  explain_command.py  export_command.py  history_command.py  history_retrieval_command.py  job_control_command.py  outputs_command.py  question_command.py  restart_mcp_command.py  ssh_command.py  version_command.py
app/tools/: __init__.py  base.py  file_reader.py  file_writer.py  linux_command.py  mcp_client.py  mcp_container_manager.py  mcp_registry.py  mcp_server_manager.py
plugins/: ai_command.py  alias_command.py  cd_command.py  change_partner_command.py  dir_stack_command.py  export_command.py  history_command.py  history_retrieval_command.py  job_control_command.py  question_command.py  ssh_command.py  version_command.py
tests/: __init__.py  run_tests.py  simple_http_mcp_server.py  simple_mcp_server.py  test_helper.py  test_tool_context.py  test_tools.py  testbed.yaml
tests/tools/: __init__.py  (+6 more)
(+22 files in other folders)
