[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jibberish"
description = "AI-powered Linux shell"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "click>=8.0.0",
    "openai>=1.0.0",
    "psutil>=7.0.0",
    "azure-identity>=1.12.0"
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.12.0",
    "azureopenai>=0.0.1 ; python_version>='3.8'"
]

[project.scripts]
jibberish = "app.jibberish:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
